<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <!--
        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar" />
        -->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="140dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="10dp"
            tools:context=".MainActivity"
            android:background="@color/blanc">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/mail"
                    android:drawableLeft="@drawable/user"
                    android:hint="@string/Mail"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="0dp"
                    android:drawablePadding="5dp"
                    android:textColorHint="@color/colorAccentHint"
                    android:theme="@style/AppTheme"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/layout_mail">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/pass"
                    android:drawableLeft="@drawable/pass"
                    android:hint="@string/Password"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="0dp"
                    android:drawablePadding="5dp"
                    android:textColorHint="@color/colorAccentHint"
                    android:theme="@style/AppTheme"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_below="@+id/layout_pass">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_connexion"
                    android:id="@+id/button"
                    android:theme="@style/PrimaryButton"
                    android:textColor="@color/pageBG"
                    android:onClick="checkLogin"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>